logs/worch-ups.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/orch'...
Compiling './lib/python3.5/site-packages/orch/build.py'...
***   File "./lib/python3.5/site-packages/orch/build.py", line 32
    print 'TOBUILD',tobuild
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/orch/configure.py'...
***   File "./lib/python3.5/site-packages/orch/configure.py", line 99
    print '[%s]' % node.secname()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/orch/deconf.py'...
***   File "./lib/python3.5/site-packages/orch/deconf.py", line 46
    print 'Reading %s' % fpath
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/orch/features'...
Compiling './lib/python3.5/site-packages/orch/features/feature_patch.py'...
***   File "./lib/python3.5/site-packages/orch/features/feature_patch.py", line 57
    raise ValueError,msg
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/orch/tools.py'...
***   File "./lib/python3.5/site-packages/orch/tools.py", line 87
    print '%s: step="%s", dep="%s"' % (self.package, mystep, other)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/orch/util.py'...
***   File "./lib/python3.5/site-packages/orch/util.py", line 189
    except Exception,err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/worch'...
Listing './lib/python3.5/site-packages/worch/extras'...
Compiling './lib/python3.5/site-packages/worch/extras/tbbinst.py'...
***   File "./lib/python3.5/site-packages/worch/extras/tbbinst.py", line 39
    print 'INSTDIR:', instdir.abspath()
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
Listing './share/worch'...
Listing './share/worch/config'...
Listing './share/worch/config/examples'...
Listing './share/worch/wscripts'...
Listing './share/worch/wscripts/worch'...
